Updated to 4.9 (sync with ROSA)

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  IMDbPY-3.9.tar.gz: db3f2ecc6bf29326df82c5e710e32155fec52418
 sources:
-  "IMDbPY-3.9.tar.gz": db3f2ecc6bf29326df82c5e710e32155fec52418
+  IMDbPY-4.9.tar.gz: dc1313c204933b53b8fef0edfddd5b2ccbbf9b9b
